Re-do layout for coin articles and fix spacing for content area (#890)
* Re-do layout for coin articles and fix spacing for content area

* Fix sass compile error

* Remove pp and change coin article order

* Add breadcrumbs to index page

--- a/app/assets/stylesheets/coin-articles.scss
+++ b/app/assets/stylesheets/coin-articles.scss
@@ -1,33 +1,27 @@
 @import 'variables';
 @import 'tachyons';
 @import 'components/table';
-@import 'components/container';
 
 h1 {
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 800;
-  line-height: 1.3em;
+  line-height: 1.3;
   text-align: center;
   margin-bottom: 0;
 }
+p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 0 0 1rem;
+}
+section {
+  width: 100%;
+  max-width: $fixed-width;
+  margin-left: auto;
+  margin-right: auto;
+}
 .icon span {
   padding-left: 0.5rem;
-}
-.container-fixed {
-  @extend .container-wide;
-  @media #{$screen-min-xl} {
-    width: 100%;
-    max-width: $fixed-width;
-    margin-left: auto;
-    margin-right: auto;
-    .col-md-8.col-md-offset-2 {
-      width: 100%;
-      max-width: 100%;
-      flex-basis: 100%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
 }
 .article-grid-box {
   display: grid;
@@ -38,6 +32,9 @@ h1 {
   padding: 1rem 0 0;
 }
 #content {
+  li {
+    line-height: 2;
+  }
   img {
     display: block;
     margin-left: auto;
@@ -48,6 +45,21 @@ h1 {
     margin-right: auto;
     @extend %striped-table;
   }
+  td {
+    ul,
+    ol {
+      margin: 0;
+      padding-inline-start: 20px;
+      li {
+        line-height: 1.15;
+      }
+    }
+  }
+}
+#side-bar {
+  a {
+    line-height: 1.3;
+  }
 }
 #table-of-contents {
   ul {
@@ -55,16 +67,25 @@ h1 {
     padding-inline-start: 0;
     list-style: none;
     li {
+      margin-bottom: 0.8rem;
       a {
         display: inline-block;
-        margin-bottom: 0.5rem;
+      }
+      ul {
+        margin-top: 0.8rem;
+        ul {
+          margin-left: 1.5rem;
+          li {
+            list-style: circle;
+          }
+        }
       }
     }
   }
 }
 #related-articles {
   div {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.8rem;
   }
 }
 #author-box {
@@ -80,21 +101,9 @@ h1 {
 }
 @media #{$screen-min-m} {
   h1 {
-    font-size: 45px;
-  }
-  #side-bar {
-    position: absolute;
-    left: 83.334%; // based on #content flexbox width
-    margin-left: 0;
-    margin-right: 0;
-    width: auto;
+    font-size: 48px;
   }
   #author-box {
     max-width: 750px;
-  }
-}
-@media #{$screen-min-xl} {
-  #side-bar {
-    left: calc(#{$fixed-width / 2} + 50%);
   }
 }
